# fastapi_mcp

./: pyproject.toml
